# TOMB5-Original

./: CMakeLists.txt  README.md
EMULATOR/: LIBCD.C  LIBGPU.C
GAME/: CONTROL.C  EFFECTS.C
SPEC_PSXPC_N/: ANIMITEM.C  CALCHAIR.C  CALCLARA.C  DELTAPAK_S.C  DRAWOBJ.C  DRAWSKY.C  LARA1.C  LARA1.C.bak  LARA3.C  LARA4.C  LARA5.C  LIGHT.C  MATHS.C  ROOMLET1.C  ROOMLET2.C  ROOMLET3.C  ROOMLET4.C  ROOMLETB.C
